examples/test/testpolicy4569.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4569
  namespace: namespace53
spec:
  podSelector:
    matchLabels:
      key42: value7
      key1: value47
      key5: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value39
          key46: value4
          key32: value22
      podSelector:
        matchLabels:
          key48: value44
